welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:15: error: '=' expected but '(' found.
def createTab(num : Int):Array[Color](num)=
                                     ^Array1:21: error: illegal start of simple expression
def remplirTab(num:Int, T : Array[Color]):Array[Color](num)=
^Array1:21: error: '=' expected but '(' found.
def remplirTab(num:Int, T : Array[Color]):Array[Color](num)=
                                                      ^Array1:31: error: illegal start of simple expression
def decale()
^